fix switcher align, card background fit

--- a/src/components/CardMedium/CardMedium.module.scss
+++ b/src/components/CardMedium/CardMedium.module.scss
@@ -127,6 +127,7 @@ $color: var(--text-color);
 	width: 556px;
 	height: 480px;
 	border-radius: 12px;
+	object-fit: cover;
 }
 
 .favourites {
